# edibles

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  DataHandling.py  Datasets.pickle  Datasets.txt  DualTelluric.py  EDIBLES_LineList.txt  IMG_7232.HEIC  LICENSE  LICENSE.rst  MANIFEST.in  Math.py  NaI_lines_fit.py  README.md  README.rst  __init__.py  all_continua.py  astro_wrapper.py  atomic_lines.txt  catalog_exmp.csv  catalog_exmp1.csv  continuumGenerator.py  continuum_guess.py  create_model.py  dataset_viewing.py  datasets.dict  datasets_py2.dict  edibles_create_obslist.py  edibles_function.py  edibles_model.py  edibles_settings.py  edibles_spectrum.py  final_version  fit.py  fits2ascii.py  frequency_convert.py  (+22 more)
.circleci/: config.yml
HD170740/: voigt_use.py
HD170740_files_we_need/: voigt_use.py
TestAndExample/: DualTelluric.py  HD49787_Na3302.py  Telluric_O12.py  test_advanced_fit.py  test_filesearch_getparameters_fit.py
catalog/: DR3_obslist_ext.txt  catalog_exmp.csv  catalogue.py.ipynb  cataloguing.py
data/: DR3_ObsLog.csv  edibles_create_obslist.py
docs/: Makefile  __init__.py  conf.py  edibles.fit.rst  edibles.functions.rst  edibles.rst  index.rst  install.rst  make.bat  modules.rst  requirements.txt
edibles/: __init__.py  compSciProject.py  compareModels.py  continuum.py  models.py  optimizeNA.py  sightline.py
examples/: Allie_ISLineFitter_Example.py  Bayes_Test.py  CompareHD73882.py  ISLineFitter_li.py  IS_benchmark_test1.py  IS_benchmark_test2.py  IS_benchmark_test3.py  IS_benchmarks.py  MultiNa.py  (+14 more)
(+1004 files in other folders)
